--- a/prelims.tex
+++ b/prelims.tex
@@ -47,20 +47,24 @@ consists of a \emph{state space} $X\subseteq \mathbb{R}^n$,
 an \emph{initial state} $x_\init\in X$,
  an \emph{input space} $U\subseteq\mathbb{R}^m$, 
 a compact \emph{disturbance set} $W\subset \mathbb{R}^n$ and
-a \emph{nominal dynamics} $f:X\times U\rightarrow X$ such that $f(\cdot,u)$ is locally Lipschitz for all $u\in U$.%, an \emph{output space} $Y\subseteq \mathbb{R}^p$, and
+a \emph{nominal dynamics} $f:X\times U\rightarrow X$. For a given time horizon $T$, a (state) \emph{trajectory} of $\Sigma$ is a function $\xi\colon[0;T]\rightarrow X$ such that $\xi(0)=x_\init$ and $\xi(\cdot)$ fulfills the following inclusion relation for every $t\in[0;T]$:
+\begin{equation}\label{equ:def_f}
+	\xi(t+1)\in f(\xi(t),u(t)) + W. 
+\end{equation} 
+%We collect all such solutions in the set $\Sol_\Sigma(x_0,u,T)$. 
+% such that $f(\cdot,u)$ is locally Lipschitz for all $u\in U$.%, an \emph{output space} $Y\subseteq \mathbb{R}^p$, and
 %an \emph{output function} $h\colon X\mapsto Y$. 
 %
 %We call each element of the set $\sem{X}$ a \emph{state}, and the set $\sem{X} = \mathbb{R}^{|X|}$ the \emph{state space} of $\Sigma$.
 %Throughout, we will assume that there is a metric $d\colon \sem{X}\times \sem{X}\to \mathbb{R}$ on the set $\sem{X}$ such that $(\sem{X},d)$ is a metric space. 
-
-Given a time horizon $T>0$, and a constant input $u\in U$, 
-a (state) \emph{trajectory} of $\Sigma$ 
-on $[0,T]$ is an absolutely continuous function $\xi:[0,T]\rightarrow X$  such that $\xi(0) = x_\init$ and
-$\xi(\cdot)$ fulfills the following differential inclusion for almost every $t\in[0,T]$:
-\begin{equation}\label{equ:def_f}
- \dot{\xi}\in f(\xi(t),u) + W. 
-\end{equation} 
-We collect all such solutions in the set $\Sol_\Sigma(x_0,u,T)$. 
+%Given a time horizon $T>0$, and a constant input $u\in U$, 
+%a (state) \emph{trajectory} of $\Sigma$ 
+%on $[0,T]$ is an absolutely continuous function $\xi:[0,T]\rightarrow X$  such that $\xi(0) = x_\init$ and
+%$\xi(\cdot)$ fulfills the following differential inclusion for almost every $t\in[0,T]$:
+%\begin{equation}\label{equ:def_f}
+% \dot{\xi}\in f(\xi(t),u) + W. 
+%\end{equation} 
+%We collect all such solutions in the set $\Sol_\Sigma(x_0,u,T)$. 
 
 \smallskip
 \noindent\textbf{Transition System.}\
@@ -76,7 +80,7 @@ if $|\rho| < \infty$ then $\delta(z_{|\rho|},u)= \emptyset$ for all $u\in U$.
 \smallskip
 \noindent\textbf{Product Control System.}\
 Let $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, be a set of $N$ control systems. 
-We assume that all of the control systems within $\set{\Sigma^i}_{i\in [1;N]}$ share an output space $Y\subseteq\reals^p$ to which there exists a set of projections of the form $h^i\colon X^i\rightarrow Y$. Remember our motivating example, wherein the crane's state space consists of the cart's position ($z$), the cart's speed ($\dot z$), the pendulum's angular position ($\theta$), and angular speed ($\dot \theta$). The state space for the vehicle is described with only one state variable $z'$ describing its position. Note that $X^1\subseteq \reals^4$ and $X^2\subseteq \reals$. Now, defining $h^1=\begin{bmatrix}z+l\sin(\theta)&0.6+l\cos(\theta)\end{bmatrix}^T$ and $h^2=\begin{bmatrix}z'&0.4\end{bmatrix}^T$, both state spaces can be projected to $Y\subseteq \reals^2$ in which we would like to compute distance.
+We assume that all of the control systems within $\set{\Sigma^i}_{i\in [1;N]}$ share an output space $Y\subseteq\reals^p$ to which there exists a set of projections of the form $h^i\colon X^i\rightarrow Y$. Recall our motivating example, wherein the crane's state space consists of the cart's position ($z$), the cart's speed ($v_z$), the pendulum's angular position ($\theta$), and angular speed ($v_\theta$). The state space for the vehicle is described with only one state variable $z'$ describing its position. Note that $X^1\subseteq \reals^4$ and $X^2\subseteq \reals$. Now, defining $h^1=\begin{bmatrix}z+l\sin(\theta)&0.6+l\cos(\theta)\end{bmatrix}^T$ and $h^2=\begin{bmatrix}z'&0.4\end{bmatrix}^T$, both state spaces can be projected to $Y\subseteq \reals^2$ in which we would like to compute distance.
 %For example, in a multi-robot scenario, all of the robots move within a two or three dimensional space independent of their individual dynamics.
 We define distance between two control systems as $D\colon X^i\times X^j\rightarrow \reals_{\geq 0}$, $D\colon (u,v)\mapsto\| h^i(u)-h^j(v)\|$. We extend the definition of $D$ to measure distance between a system's state and a set defined over the shared output space: for any given $u\in X^i$ and $V\subseteq Y$, $D(u,V) \coloneqq \inf_{v\in V}\|h^i(u)-v\|$. The \emph{product control system of } $\set{\Sigma^i}_{i\in [1;N]}$ is the control system $\Sigma^\times = (X^\times, x_\init^\times, U^\times, \set{0^n}, f^\times, D)$ wherein $X^\times\coloneqq X^1\times \ldots \times X^N$ and we assume that $\sum_{i\in [1;N]} n_i=n$, $x_\init^\times\coloneqq (x_\init^1,\ldots,x_\init^N)$, $U^\times\coloneqq U^1\times\dots\times U^N\subset \reals^m$ and $f^\times\coloneqq f^{1}\otimes \ldots\otimes f^{N}$. 
 We use the state projection operator $\proj^{i}\colon X^\times\to X^i$, $\proj^{i}\colon (x^1,\ldots,x^N)\mapsto x^i$. %We extend definition of $\proj^i$ to denote projection of a set $A\subseteq X^\times$ to $X^i$ as $\proj^i(A)\coloneqq \set{x\mid \exists x^\times\in A.\;\proj^i(x^\times)=x}$.
@@ -88,11 +92,12 @@ Let $\set{S^i}_{i\in [1;N]}$, $S^i=(Z^i,z_\init^i,U^i,\delta^i)$, be a set of $N
 The \emph{product transition system of } $\set{S^i}_{i\in [1;N]}$ is the transition system $S^\times \coloneqq (Z^\times, z^\times, U^\times, \delta^\times)$ such that $Z^\times \coloneqq Z^1\times \ldots \times Z^N$, $z^\times_\init\coloneqq (z_\init^1,\ldots,z_\init^N)$, $U^\times \coloneqq U^1\times \ldots\times U^N$, and $\delta^\times \coloneqq \delta^1\otimes\ldots \otimes \delta^N$.
 From here on, we will omit the domain of $i$ and will use ``$\set{S^i}$'' instead of ``$\set{S^i}_{i\in [1;N]}$'' for simpler notation.
 
-\subsection{Controllers} Here, we only introduce the notations for representing different types of controllers used in this paper. More detailes can be found in Sec.~\ref{sec:controllers}. Let $\Sigma_\tau=(X,x_\init,U,f_\tau)$ denote sampled time abstraction of a control system $\Sigma$ for a given sample time $\tau>0$. An open-loop controller of $\Sigma_\tau$ is a function $C\colon [0;T]\to U$ for some given time horizon $T>0$. The open-loop is obtained when we connect $C$ with $\Sigma_\tau$ serially (denoted by $C \triangleright \Sigma_\tau$). %The \emph{open-loop behavior} $\Beh^\ol(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C \triangleright \Sigma_\tau$.
- A feedback controller of $\Sigma_\tau$ is a function $C\colon X\times[0;T]\to U$ for a given time horizon $T$. The closed-loop is obtained when we connect $C$ with $\Sigma_\tau$ in feedback (denoted by $C\parallel\Sigma_\tau$). %The \emph{closed-loop behavior} $\Beh^\cl(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C\parallel\Sigma_\tau$. 
-Let $\Sigma^\times_\tau$ be the product sampled time abstraction of $\set{\Sigma^i} $.
-A global open-loop (feedback) controller of $\set{\Sigma^i} $ is an open-loop (a feedback) controller of $\Sigma_\tau^\times$.
-On the other hand, a set of local open-loop (feedback) controllers of $\set{\Sigma^i_\tau} $ is a set $\set{C^i} $ where, for every $i\in [1;N]$, $C^i$ is an open-loop (a feedback) controller of $\Sigma^i_\tau$. Given $\set{\Sigma_\tau^i} $ and a set of open-loop (feedback) controllers $\set{C^i} $, we define the \emph{decentralized open-loop} (\emph{decentralized closed-loop})---denoted by $\set{C^i} \triangleright \set{\Sigma_\tau^i} $ ($\set{C^i} \parallel \set{\Sigma_\tau^i} $)---as the product transition system of $\set{C^i\triangleright \Sigma^i_\tau} $ ($\set{C^i\parallel \Sigma^i_\tau} $).
+\subsection{Controllers} Here, we only introduce the notations for representing different types of controllers used in this paper. More detailes can be found in Sec.~\ref{sec:controllers}. %Let $\Sigma=(X,x_\init,U,W,f)$ denote a control system $\Sigma$.
+An open-loop controller of $\Sigma$ is a function $C\colon [0;T]\to U$ for some given time horizon $T\in\mathbb N$. The open-loop is obtained when we connect $C$ with $\Sigma$ serially (denoted by $C \triangleright \Sigma$). %The \emph{open-loop behavior} $\Beh^\ol(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C \triangleright \Sigma_\tau$.
+ A feedback controller of $\Sigma$ is a function $C\colon X\times[0;T]\to U$ for a given time horizon $T$. The closed-loop is obtained when we connect $C$ with $\Sigma$ in feedback (denoted by $C\parallel\Sigma_\tau$). %The \emph{closed-loop behavior} $\Beh^\cl(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C\parallel\Sigma_\tau$. 
+Let $\Sigma^\times$ be the product sampled time abstraction of $\set{\Sigma^i} $.
+A global open-loop (feedback) controller of $\set{\Sigma^i} $ is an open-loop (a feedback) controller of $\Sigma^\times$.
+On the other hand, a set of local open-loop (feedback) controllers of $\set{\Sigma^i} $ is a set $\set{C^i} $ where, for every $i\in [1;N]$, $C^i$ is an open-loop (a feedback) controller of $\Sigma^i$. Given $\set{\Sigma^i} $ and a set of open-loop (feedback) controllers $\set{C^i} $, we define the \emph{decentralized open-loop} (\emph{decentralized closed-loop})---denoted by $\set{C^i} \triangleright \set{\Sigma^i} $ ($\set{C^i} \parallel \set{\Sigma^i} $)---as the product transition system of $\set{C^i\triangleright \Sigma^i} $ ($\set{C^i\parallel \Sigma^i} $).
 
 %here
 %\subsection{Abstraction-Based Controller Synthesis Background}
