--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,19 @@
 %! TEX ROOT = ./main.tex
 
-We consider the decentralized controller synthesis problem for a group of robots, modeled as perturbed nonlinear dynamical systems, and assigned with a set of joint reach-avoid tasks.
-We propose a semi-centralized hierarchical solution approach:
-At the top level, we obtain a rough joint plan for the group of robots; we employ a fast tool called ALTRO for this purpose.
-At the bottom level, we use abstraction-based controller design method to synthesize a set of decentralized controllers, which will track the high level plan against worst-case disturbances.
-We demonstrate the effectiveness of our approach on several multi-robot examples using two particular types of control specifications.
+We consider the decentralized controller synthesis problem for multi-agent control systems for joint reach-avoid specifications.
+Each control system is modeled as a nonlinear dynamical system with disturbance, the control objective is to synthesize \emph{local}
+feedback controllers that guarantee that the overall system meets the specification even under the influence of disturbances.
+%
+Existing techniques based on planning or trajectory optimization usually ignore the effects of disturbance and produce open-loop
+\emph{nominal} trajectories which may not suffice in the presence of disturbances.
+Techniques based on formal synthesis of temporal controllers do not scale as the number of agents increase.
+
+We propose a two-level solution approach that combines fast global nominal trajectory generation and local application of formal synthesis.
+At the top level, we ignore the effect of disturbances and obtain a joint open-loop plan for the system using a fast trajectory optimizer.
+At the lower level, we use abstraction-based controller design to synthesize a set of decentralized feedback controllers 
+that track the high level plan against worst-case disturbances.
+We demonstrate the effectiveness of our approach on several multi-robot examples using two particular classes of control specifications.
 In the first type, we assume that the robots need to fulfill their own reach-avoid tasks while avoiding collision with the other robots.
-In the second type, we require the robots to fulfill reach-avoid tasks while maintaining certain formation.
+In the second type, we require the robots to fulfill reach-avoid tasks while maintaining certain formation constraints.
+Our experiments show that the combination technique is able to produce formally guaranteed feedback controllers while scaling to many robots.
+In contrast, nominal open loop controllers did not guarantee the property and formal synthesis approaches did not finish.
