--- a/problem.tex
+++ b/problem.tex
@@ -12,8 +12,9 @@ Each system is modeled as a nonlinear control systems subjected to disturbances.
 We want to synthesize \emph{local} feedback controllers for each agent so that a global reach-avoid specification, defined on the state space of the product control system, is fulfilled under the worst-case disturbance.
 Concretely, we want to develop an algorithm with the following input and output:
 \begin{description}
-	\item[Inputs:] A set of control systems $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, a sampling time $\tau >0$, a robustness margin $\varepsilon$ and an $\varepsilon$-robust version of a reach-avoid specification $\Phi=\lnot\avoid\;\mathcal{U}\;\goal$ (denoted by $\Phi_\varepsilon$).% for some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}_{i\in [1;N]}$.
-	\item[Output:] A set of local feedback controllers $\set{C^i}_{i\in [1;N]}$ of $\set{\Sigma^i_\tau}_{i\in [1;N]}$ so that $\set{C^i}_{i\in [1;N]}\parallel \set{\Sigma_\tau^i}_{i\in [1;N]}$ realizes $\Phi$. 
+	\item[Inputs:] A set of control systems $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$ and a reach-avoid specification $\Phi=\lnot\avoid\;\mathcal{U}\;\goal$.% for some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}_{i\in [1;N]}$.
+	\item[Parameters:] A robustness margin $\varepsilon\in \reals^n_{>0}$.%, state space discretization parameter $\eta_x\in\reals^n$ and input space discretization parameter $\eta_u\in\reals^m$.
+	\item[Output:] A set of local feedback controllers $\set{C^i}_{i\in [1;N]}$ of $\set{\Sigma^i}_{i\in [1;N]}$ so that $\set{C^i}_{i\in [1;N]}\parallel \set{\Sigma^i}_{i\in [1;N]}$ realizes $\Phi$. 
 \end{description}
 
 It is important to notice that any solution for this problem must provide a formal guarantee: the reach-avoid specification $\Phi$ must be satisfied under the worst-case disturbance affecting the product system.
