--- a/main.tex
+++ b/main.tex
@@ -8,8 +8,9 @@
 
 \include{preamble} % for the packages and the macros
 
-\title{Multi-Agent Reach-Avoid Control with Formal Guarantees}
+%\title{Multi-Agent Reach-Avoid Control with Formal Guarantees}
 
+\title{Symbolic Reach-Avoid Control of Multi-Agent Systems}
 %\author{Mehrdad, Kaushik, Mahmoud, Rupak, Sadegh}
 
 \makeatletter
